[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/gameplay/BattleScene.gd" id="1"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.07, 0.08, 0.12, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="BattleInfoLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Battle"

[node name="CombatRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="PartyPanel" type="PanelContainer" parent="Margin/VBox/CombatRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PartyLabel" type="Label" parent="Margin/VBox/CombatRow/PartyPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Party\nHero\nMage\nRogue"

[node name="EnemyPanel" type="PanelContainer" parent="Margin/VBox/CombatRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyLabel" type="Label" parent="Margin/VBox/CombatRow/EnemyPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Enemies\n???"

[node name="BattleLog" type="RichTextLabel" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 140)
bbcode_enabled = true
scroll_active = true

[node name="CommandRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AttackButton" type="Button" parent="Margin/VBox/CommandRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Attack"

[node name="MagicButton" type="Button" parent="Margin/VBox/CommandRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Magic"

[node name="ItemButton" type="Button" parent="Margin/VBox/CommandRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Item"

[node name="FleeButton" type="Button" parent="Margin/VBox/CommandRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Flee"

[node name="SubMenuPanel" type="PanelContainer" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
visible = false

[node name="SubMenuVBox" type="VBoxContainer" parent="Margin/VBox/SubMenuPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SubMenuTitle" type="Label" parent="Margin/VBox/SubMenuPanel/SubMenuVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Sub Menu"

[node name="SubMenuRow" type="HBoxContainer" parent="Margin/VBox/SubMenuPanel/SubMenuVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="SubMenuList" type="ItemList" parent="Margin/VBox/SubMenuPanel/SubMenuVBox/SubMenuRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="SubMenuRight" type="VBoxContainer" parent="Margin/VBox/SubMenuPanel/SubMenuVBox/SubMenuRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="TargetRow" type="HBoxContainer" parent="Margin/VBox/SubMenuPanel/SubMenuVBox/SubMenuRow/SubMenuRight"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TargetLabel" type="Label" parent="Margin/VBox/SubMenuPanel/SubMenuVBox/SubMenuRow/SubMenuRight/TargetRow"]
layout_mode = 2
text = "Target"

[node name="SubMenuTargetOption" type="OptionButton" parent="Margin/VBox/SubMenuPanel/SubMenuVBox/SubMenuRow/SubMenuRight/TargetRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SubMenuButtonRow" type="HBoxContainer" parent="Margin/VBox/SubMenuPanel/SubMenuVBox/SubMenuRow/SubMenuRight"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SubMenuConfirmButton" type="Button" parent="Margin/VBox/SubMenuPanel/SubMenuVBox/SubMenuRow/SubMenuRight/SubMenuButtonRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Confirm"

[node name="SubMenuCancelButton" type="Button" parent="Margin/VBox/SubMenuPanel/SubMenuVBox/SubMenuRow/SubMenuRight/SubMenuButtonRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="SubMenuHint" type="Label" parent="Margin/VBox/SubMenuPanel/SubMenuVBox/SubMenuRow/SubMenuRight"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 2
text = "Enter confirms. Esc cancels."

[node name="ResultPanel" type="PanelContainer" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResultVBox" type="VBoxContainer" parent="Margin/VBox/ResultPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ResultLabel" type="Label" parent="Margin/VBox/ResultPanel/ResultVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Victory"

[node name="ContinueButton" type="Button" parent="Margin/VBox/ResultPanel/ResultVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"
